Fix OC alignment issue. (#346)

--- a/extension/scripts/features/oc-times/ttOCTimes.css
+++ b/extension/scripts/features/oc-times/ttOCTimes.css
@@ -4,4 +4,5 @@
 	position: relative;
 	top: 8px;
 	right: -7px;
+	float: right;
 }
